--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-test-app",
+  "name": "content-completeness-app",
   "version": "1.0.0",
   "description": "",
   "license": "BSD-3-Clause",
